2000-05-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (scm_init_gc):  Protect scm_after_gc_hook, since this will
	soon not be done by scm_create_hook any longer.

	* hooks.c (make_hook, print_hook, scm_create_hook,
	scm_make_hook_with_name, scm_make_hook), hooks.h (SCM_HOOK_NAME,
	SCM_HOOK_PROCEDURES, SCM_SET_HOOK_PROCEDURES,
	scm_make_hook_with_name), init.c (scm_boot_guile_1):  Hooks no
	longer have names.  As an intermediate solution, the name
	predicate is emulated via object properties, but use of this
	feature is deprecated.

	* hooks.h (scm_free_hook):  Removed, as it is never defined.

2000-05-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.[ch] (SCM_POSFIXABLE, SCM_NEGFIXABLE, SCM_FIXABLE):
	Un-deprecated since otherwise user code can't determine whether a
	number fits into an inum any longer.  The names should be changed
	some time, though.

	* numbers.c (scm_big2inum):  Eliminated use of SCM_UNEGFIXABLE.

	* tags.h (SCM_UNPACK_CAR):  Deprecated.

2000-05-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* filesys.h (SCM_OPDIRP), fluids.h (SCM_FLUIDP, SCM_FLUID_NUM),
	fports.h (SCM_OPFPORTP, SCM_OPINFPORTP, SCM_OPOUTFPORTP), hooks.h
	(SCM_HOOK_ARITY), keywords.h (SCM_KEYWORDP, SCM_KEYWORDSYM),
	numbers.h (SCM_NUMP, SCM_BIGSIGN, SCM_BDIGITS, SCM_NUMDIGS): 
	Replace SCM_UNPACK_CAR appropriately.  Don't access cells via
	SCM_{SET}?C[AD]R unless they are known to be cons cells.

	* gc.c (scm_heap_seg_data_t, scm_mark_locations, scm_cellp,
	init_heap_seg):  Remove unused struct member variable 'valid'.

2000-05-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* fports.c (fport_write), ports.c (scm_markstream, scm_port_mode,
	scm_print_port_mode), ports.h (SCM_OPPORTP, SCM_OPINPORTP,
	SCM_OPOUTPORTP, SCM_INPUT_PORT_P, SCM_OUTPUT_PORT_P, SCM_OPENP),
	procs.h (SCM_CLOSCAR), unif.h (SCM_ARRAY_NDIM, SCM_ARRAY_CONTP),
	variable.h (SCM_VARIABLEP):  Replace SCM_UNPACK_CAR
	appropriately.

2000-05-23  Dirk Herrmann  <D.Herrmann@tu-bs.de>
